--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&family=Roboto&family=Rubik&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Mada&family=Roboto&family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Aclonica&family=Inter&family=Mada&family=Roboto&family=Rubik&display=swap');
 
 * {
   margin: 0px;
@@ -109,13 +111,11 @@ nav {
 }
 
 .hero-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  position: absolute;
-  margin-left: 70px;
-  width: 477px;
-  height: 209px;
+     display: flex;
+     flex-direction: column;
+     justify-content: space-between;
+     align-items: start;
+     margin-left: 80px;
 }
 
 .hero-img{
@@ -132,6 +132,24 @@ nav {
     top: 0px;
 }
 
+#winters-only{
+    color: #000;
+    font-family: Mada;
+    font-size: 2vw;
+    font-weight: 400;
+}
 
+#fashion{
+flex-shrink: 0;
+color: #000;
+font-family: Aclonica;
+font-size: 10vw;
+font-weight: 400;
+}
 
-
+#best-day{
+color: #000;
+font-family: Mada;
+font-size: 2vw;
+font-weight: 400;
+}
