--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&family=Roboto&family=Rubik&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Inter&family=Mada&family=Roboto&family=Rubik&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Aclonica&family=Inter&family=Mada&family=Roboto&family=Rubik&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter&family=Mada&family=Roboto&family=Rubik&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Aclonica&family=Inter&family=Mada&family=Roboto&family=Rubik&display=swap");
 
 * {
   margin: 0px;
@@ -94,7 +94,6 @@ nav {
 
 .hero-section {
   width: 90vw;
-  height: 600px;
   border-radius: 20px;
   background: linear-gradient(
     90deg,
@@ -103,6 +102,7 @@ nav {
   );
   margin-inline: 50px;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
   z-index: 3;
@@ -110,46 +110,46 @@ nav {
   position: relative;
 }
 
-.hero-content {
-     display: flex;
-     flex-direction: column;
-     justify-content: space-between;
-     align-items: start;
-     margin-left: 80px;
+.hero-content-left{
+  margin-left: 80px;
 }
 
-.hero-img{
-    width: 50%;
-    position: absolute;
-    right: 0px;
-    padding: 0px;
-    top: 0px;
+#winters-only {
+  color: #000;
+  font-family: Mada;
+  font-size: 13px;
+  font-weight: 400;
 }
 
-.hero-img> img{
-    position: absolute;
-    right: 0px;
-    top: 0px;
+#fashion {
+  flex-shrink: 0;
+  color: #000;
+  font-family: Aclonica;
+  font-size: 109px;
+  font-weight: 400;
 }
 
-#winters-only{
-    color: #000;
-    font-family: Mada;
-    font-size: 2vw;
-    font-weight: 400;
+#best-day {
+  color: #000;
+  font-family: Mada;
+  font-size: 19px;
+  font-weight: 400;
 }
 
-#fashion{
-flex-shrink: 0;
-color: #000;
-font-family: Aclonica;
-font-size: 10vw;
-font-weight: 400;
+.hero-content-left > button {
+  background: linear-gradient(180deg, rgba(255, 81, 81, 0.5) 0%, #ff5e3a 100%);
+  color: white;
+  margin-bottom: 40px;
+  cursor: pointer;
+  border-radius: 10px;
+  width: 200px;
+  height: 50px;
+  border: none;
 }
 
-#best-day{
-color: #000;
-font-family: Mada;
-font-size: 2vw;
-font-weight: 400;
+.hero-right {
+  display: flex;
+  justify-content: end;
+  max-height: 100%;
+
 }
